Changing colour of tables

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                         <div class="form-group">
                             <label for="pwd">Load Date:</label><br>
-                            <input type="text" class="date" ng-model='endDate' datepicker ng-change="updateList()"></select>
+                            <input type="text" class="date" ng-model='endDate' datepicker ng-change="updateList()">
                         </div>    
                     <div class="form-group">
                         <label for="pwd">WE List:</label><br>
